[package]
name = "qwen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
http = "0.2"
hyper = "0.14"
serde_json = "1.0"